# SSI2016-jet-clustering

./: LICENSE  README.md  af.py  fuzzyJets.py  fuzzyJets.py~  hdb.py  kmeans.py  read_and_rescale_data.py  read_data.py  visual.py  visual.py~  ward.py  weighted_kmeans.py
JetGenerator/: JetBranches.cxx  JetBranches.h  JetGenerator.cxx  README  clu10_2jets.txt  clu10_2jets_withNoise.txt  clu15_2jets.txt  clu15_2jets_withNoise.txt  clu30_10jets.txt  clu30_10jets_withNoise.txt  clu30_2jets.txt  clu30_2jets_withNoise.txt  generateJets  testing.root  testing.txt
spartyjet-4.0.2_mac/: CMakeLists.txt  COPYING  Makefile  MakefileCommonOpt  README  SJconfig.h  SJconfig.h.in  setup.sh
spartyjet-4.0.2_mac/EventShape/: CMakeLists.txt  EventShape.cc  EventShape.hh  EventShapeDict.cpp  EventShapeDict_rdict.pcm  EventShapeLinkDef.hpp  Makefile  ThrustTool.cc  ThrustTool.hh
spartyjet-4.0.2_mac/ExternalTools/: AngularCorrelation.cc  AngularCorrelation.hh  AngularCorrelationTool.hh  BoostVariables.hh  CMSTopTagger.hh  CMakeLists.txt  DetectorModel.cc  DetectorModel.hh  Dipolarity.hh  ExternalToolsDict.cpp  ExternalToolsDict_rdict.pcm  ExternalToolsLinkDef.hpp  HEPTopTaggerWrapper.cc  HEPTopTaggerWrapper.hh  Makefile  QjetsTool.hh  README  RadialSmearingTool.hh  TopTaggerDipolarityTool.cc  TopTaggerDipolarityTool.hh  TransformerMomentHandler.cc  TransformerMomentHandler.hh  TransformerTool.cc  TransformerTool.hh  WTagger.hh
spartyjet-4.0.2_mac/ExternalTools/Qjets/: Qjets.cc  Qjets.hh  QjetsPlugin.cc  QjetsPlugin.hh
spartyjet-4.0.2_mac/FastJetTools/: CMakeLists.txt  FastJetFinder.cc  FastJetFinder.hh  FastJetTool.cc  FastJetTool.hh  FastJetToolsDict.cpp  FastJetToolsDict_rdict.pcm  FastJetToolsLinkDef.hpp  FastJetUtils.cc  FastJetUtils.hh  Makefile  PseudoJetMoment.hh  PtDensityTool.cc  PtDensityTool.hh  SelectorTool.hh  YSplitterTool.cc  YSplitterTool.hh
spartyjet-4.0.2_mac/IO/: CMakeLists.txt  CalchepPartonTextInput.cc  CalchepPartonTextInput.hh  FourVecInput.hh  HepMCInput.cc  HepMCInput.hh  HuskyInput.cc  HuskyInput.hh  IODict.cpp  IODict_rdict.pcm  IOLinkDef.hpp  InputMaker_Ntuple.cc  InputMaker_Ntuple.hh  LheInput.cc  LheInput.hh  Makefile  MultiInput.cc  MultiInput.hh  PythiaInput.cc  PythiaInput.hh  StdHepInput.cc  StdHepInput.hh  StdTextInput.cc  StdTextInput.hh
spartyjet-4.0.2_mac/JetCore/: BranchWrap.hh  CMakeLists.txt  CommonUtils.hh  CustomMessage.cc  CustomMessage.hh  FourVecCollection.cc  FourVecCollection.hh  GetJets.cc  GetJets.hh  GhostBuilder.hh  InputMaker.hh  Jet.cc  Jet.hh  JetAnalysis.cc  JetAnalysis.hh  JetBuilder.cc  JetBuilder.hh  JetCollection.cc  JetCollection.hh  JetCoreDict.cpp  JetCoreDict_rdict.pcm  JetCoreLinkDef.hpp  JetDistances.hh  JetHistory.hh  JetMoment.hh  JetMomentMap.cc  JetMomentMap.hh  JetNegEnergyTool.cc  JetNegEnergyTool.hh  JetStructure.cc  JetStructure.hh  JetTool.cc  JetTool.hh  Makefile  NtupleMaker.cc  NtupleMaker.hh  OutputVarUtils.cc  OutputVarUtils.hh  OutputVarUtils.icc
spartyjet-4.0.2_mac/JetTools/: CMakeLists.txt  CalorimeterSimTool.cc  CalorimeterSimTool.hh  EConversionTool.cc  EConversionTool.hh  EtaPhiMomentTool.cc  EtaPhiMomentTool.hh  HardProcessMatchTool.cc  HardProcessMatchTool.hh  HullMomentTool.cc  HullMomentTool.hh  JetAreaCorrectionTool.cc  JetAreaCorrectionTool.hh  JetForkTool.hh  JetMomentTool.cc  JetMomentTool.hh  JetSelectorTool.cc  JetSelectorTool.hh  JetToolsDict.cpp  JetToolsDict_rdict.pcm  JetToolsLinkDef.hpp  Makefile  TopDownPruneTool.cc  TopDownPruneTool.hh  cyl_geom.cc  cyl_geom.hh
spartyjet-4.0.2_mac/SpartyDisplay/: CMakeLists.txt  EventView.cc  EventView.hh  Jet2DView.cc  Jet2DView.hh  JetCollExtended.cc  JetCollExtended.hh  JetCollReaderBase.cc  JetCollReaderBase.hh  JetHistoryView.cc  JetHistoryView.hh  JetInputCollection.cc  JetInputCollection.hh  JetRetrieverFile.cc  JetRetrieverFile.hh  Makefile  SpartyDisplayDict.cpp  SpartyDisplayDict_rdict.pcm  SpartyDisplayLinkDef.hpp
spartyjet-4.0.2_mac/UserPlugins/: CMakeLists.txt  Makefile  UserPluginsDict.cpp  UserPluginsDict_rdict.pcm  UserPluginsLinkDef.hpp
spartyjet-4.0.2_mac/UserPlugins/ExamplePlugin/: ExamplePlugin.cc  ExamplePlugin.hh  ExamplePluginDict.cpp  ExamplePluginDict_rdict.pcm  ExamplePluginLinkDef.hpp  Makefile
spartyjet-4.0.2_mac/data/: J2_clusters.root  J2_clusters_wPile.SJ.root  J2_clusters_wPile.root  J2_clusters_wPile2.root  Wenu3parton.root  Zprime_ttbar.hepmc  minbias.root  ttbar_smallrun_pythia_events.hep  w1j.lhe
spartyjet-4.0.2_mac/data/output/: simple.root
spartyjet-4.0.2_mac/doc/: JetClasses.odp  Makefile  spartyjet-manual.tex
spartyjet-4.0.2_mac/examples_C/: CMakeLists.txt  FJExample.C  FJExample.cc  FJToolExample.cc  FourVecExample.cc  Makefile
spartyjet-4.0.2_mac/examples_py/: Boost2011.py  FJExample.py  FJToolExample.py  guiExample.py  inputExample.py  jetToolExample.py  mergedInputExample.py  overlayExample.py  pythiaExample.py  simpleExample.py
spartyjet-4.0.2_mac/python/: SpartyJetConfig.py
spartyjet-4.0.2_mac/python/spartyjet/: __init__.py  io.py  style.py  utils.py
spartyjet-4.0.2_mac/python/spartyjet/analyses/: JetAnalysisLive.py  __init__.py  boost.py
spartyjet-4.0.2_mac/python/spartyjet/gui/: JetHistoryGui.py  JetRetrieverFile.py  JetRetrieverLive.py  LineStyleCache.py  OrderedDict.py  SpartyGui.py  __init__.py
spartyjet-4.0.2_mac/utils/: PseudoJet_sanitize.py  package_spartyjet.sh  refactor.sh
